SetUpCCS: install jfx on lsst-vw01